# DFS2

./: .gitignore  .replit  CMakeLists.txt  Documentation.md  Pasted--78-Built-target-store-tests-85-Linking-CXX-executable-network-tests-100-Built-target-ne-1734730732323.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734140733280.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734144071380.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734502417461.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734542522189.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734635116667.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1734454675231.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-run-1734543301209.txt  Pasted--Running-5-tests-from-1-test-suite-Global-test-environment-set-up--1734643547114.txt  Pasted--include-boost-log-core-hpp-include-boost-log-expressions-hpp-include-boost-log-support-date--1734141598555.txt  Pasted-void-TCP-Peer-process-stream-Create-work-object-to-keep-io-context-running-and-keep-peer-c-1734561273278.txt  README.md  documentation.md  instructions.md  pyproject.toml  replit.nix  test_documentation.md
attached_assets/: Pasted--1-test-from-BootstrapTest-RUN-BootstrapTest-PeerConnection-2025-01-27-15-10-1737990693203.txt  Pasted--1-test-from-BootstrapTest-RUN-BootstrapTest-PeerConnection-2025-01-27-15-13-1737991008793.txt  Pasted--2-tests-from-BootstrapTest-RUN-BootstrapTest-PeerConnection-2025-01-27-17-4-1738000389937.txt  Pasted--2-tests-from-CodecTest-RUN-CodecTest-EncryptionVerification-2024-12-28-01-3-1735349587215.txt  Pasted--2-tests-from-CodecTest-RUN-CodecTest-EncryptionVerification-2024-12-28-01-5-1735350807592.txt  Pasted--5-tests-from-CodecTest-RUN-CodecTest-BasicSerializationDeserialization-2024-1735347480062.txt  Pasted--Configuring-done-0-0s-CMake-Warning-dev-at-CMakeLists-txt-29-add-library-Policy-CMP011-1737475839119.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734741333653.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1737479399243.txt  Pasted--Configuring-done-0-1s-CMake-Error-at-CMakeLists-txt-30-add-library-Cannot-find-source-fi-1737208837196.txt  Pasted--Configuring-done-0-1s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1737588980769.txt  Pasted--Configuring-done-0-1s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1737589270010.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1734981877666.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1735324696286.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1735325884808.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1737585357153.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1737588803718.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1738004810909.txt  Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1738005906831.txt  Pasted--RUN-BootstrapTest-FileSharing-2025-01-28-16-28-48-183290-0x00007f67aa468d80-info--1738081794493.txt  Pasted--RUN-BootstrapTest-FileSharing-2025-01-28-16-49-13-422151-0x00007f0507b52d80-info--1738087395893.txt  Pasted--RUN-BootstrapTest-FileSharing-2025-01-28-21-46-26-899098-0x00007f88cde61d80-info--1738101058294.txt  Pasted--RUN-BootstrapTest-PeerConnection-2025-01-23-22-01-48-824148-0x00007f749356ad80-info--1737669873403.txt  Pasted--RUN-CodecTest-LargeMessageHandling-2024-12-28-01-15-51-720777-0x00007fa0c1580fc0-info-1735348827380.txt  Pasted--RUN-CodecTest-LargePayloadSerializeDeserialize-2024-12-27-23-19-15-070069-0x00007efcfb0-1735341853990.txt  Pasted--RUN-CodecTest-LargePayloadSerializeDeserialize-2024-12-27-23-29-16-850262-0x00007f40ca6-1735342291734.txt  Pasted--RUN-CodecTest-MinimalFrameSerializeDeserialize-2024-12-28-18-33-52-332619-0x00007efcbc9-1735410840745.txt  Pasted--RUN-TCP-PeerTest-SerializeDeserializeMessageFrame-2025-01-23-14-59-38-207097-0x00007f29-1737644653670.txt  Pasted--Running-1-test-from-1-test-suite-Global-test-environment-set-up--1737659740682.txt  Pasted--Running-1-test-from-1-test-suite-Global-test-environment-set-up--1737674849008.txt  Pasted--Running-2-tests-from-1-test-suite-Global-test-environment-set-up--1737998095633.txt  Pasted--Running-3-tests-from-1-test-suite-Global-test-environment-set-up--1737591679659.txt  Pasted--Running-6-tests-from-1-test-suite-Global-test-environment-set-up--1735064500850.txt  Pasted-Running-main-from-build-source-googletest-src-gtest-main-cc-Running-3-tests-from-1--1737643154613.txt  Pasted-TEST-F-BootstrapTest-GetFile-const-uint8-t-PEER1-ID-1-PEER2-ID-2-const-uint16-t-PEER1--1738713513806.txt  Pasted-bool-FileServer-prepare-and-send-const-std-string-filename-std-optional-std-string-peer-id--1737331458144.txt  Pasted-please-help-me-determine-why-2025-01-28-16-49-15-425633-0x00007f0507b4c6c0-error-Stream--1738087328810.txt  Pasted-please-make-the-following-modifications-to-the-FileSharing-test-in-bootstrap-test-TEST-F-Bootstra-1738005682508.txt
include/: Documentation.cpp
include/cli/: cli.hpp
include/crypto/: byte_order.hpp  crypto_error.hpp  crypto_stream.hpp  logger.hpp  store.hpp
include/file_server/: file_server.hpp
include/logger/: logger.hpp
include/network/: bootstrap.hpp  channel.hpp  codec.hpp  connection_state.hpp  file_server.hpp  message_frame.hpp  message_handler.hpp  network_error.hpp  network_manager.hpp  peer.hpp  types.hpp  (+4 more)
src/: main.cpp
tests/: channel_test.cpp  codec_test.cpp
(+39 files in other folders)
